--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ author: sudologic
 depend:
   - WorldGuard
   - Shopkeepers
+  - DecentHolograms
 commands:
   rivals:
     description: Main rivals command
